# function-call-finetune

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml  train.py
configs/: train.yaml  train_p100.yaml
data/: inspect.py  prepare.py
docs/superpowers/plans/: 2026-05-28-eval-harness.md
docs/superpowers/specs/: 2026-05-28-eval-harness-design.md
eval/: gemini_runner.py  groq_runner.py  metrics.py  model_runner.py  prompt.py  report.py
notebooks/: eval.ipynb  train.ipynb
tests/eval/: test_metrics.py  test_report.py  test_runners_cache.py
