[project]
name = "function-call-finetune"
version = "0.1.0"
description = "Fine-tuned Gemma 4 E4B for structured function calling"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.19.0",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.31.0",
    "wandb>=0.17.0",
    "pydantic>=2.7.0",
    "huggingface-hub>=0.23.0",
    "torch>=2.3.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.27.0",
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
    "gradio>=4.37.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
]
